--- a/index.html
+++ b/index.html
@@ -1,56 +1,170 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
-    <link rel="stylesheet" href="home.css">
+    <title>HK Development</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: white;
+            color: #2a2a2a;
+            padding-bottom: 200px;
+        }
+
+        header {
+            background-color: #2a2a2a;
+            color: #ffffff;
+            padding: 2em 0;
+            text-align: center;
+            position: relative;
+        }
+
+        header img {
+            max-width: 200px;
+            margin-bottom: 1em;
+        }
+
+        header h1 {
+            font-size: 2.5em;
+            margin-bottom: 0.5em;
+        }
+
+        header p {
+            font-size: 1.2em;
+            margin: 0;
+        }
+
+        .dropdown {
+            position: absolute;
+            top: 2em;
+            left: 2em;
+            display: inline-block;
+        }
+
+        .dropdown-content {
+            display: none;
+            position: absolute;
+            background-color: #2c3e50;
+            min-width: 160px;
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+            z-index: 1;
+        }
+
+        .dropdown:hover .dropdown-content {
+            display: block;
+        }
+
+        .dropdown-content a {
+            color: #fff;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+            transition: background-color 0.3s ease;
+        }
+
+        .dropdown-content a:hover {
+            background-color: #2980b9;
+        }
+
+        section {
+            padding: 2em;
+            text-align: center;
+        }
+
+        section h2 {
+            color: #2a2a2a;
+            font-size: 2em;
+            margin-bottom: 1em;
+        }
+
+        section p {
+            font-size: 1.2em;
+            line-height: 1.6;
+            margin-bottom: 1.5em;
+        }
+
+        .projects {
+            background-color: #34495e;
+            color: #ecf0f1;
+            padding: 2em;
+            border-radius: 10px;
+            margin-top: 2em;
+        }
+
+        .project-link {
+            display: block;
+            color: #ecf0f1;
+            text-decoration: none;
+            font-size: 1.2em;
+            margin-bottom: 0.5em;
+            transition: color 0.3s ease;
+        }
+
+        .project-link:hover {
+            color: #2980b9;
+        }
+
+        footer {
+            background-color: #2c3e50;
+            color: #ecf0f1;
+            padding: 1em 0;
+            text-align: center;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+    <script src="https://unpkg.com/gsap@3.9.2"></script>
+    <script>
+        gsap.from("header", { opacity: 0, duration: 1, y: -50, ease: "power2.out" });
+        gsap.from("section", { opacity: 0, duration: 1, y: 50, ease: "power2.out", delay: 0.5 });
+    </script>
 </head>
+
 <body>
-    <div class="header">
-      <h2>HK Development</h2>
-    </div>
-    <div class="sidebar">
-      <div>
-        <a href="devhaydenkubit@gmail.com" target="_blank">
-          <img class="icon" src="icons/kisspng-mail-envelope-symbol-computer-icons-cartoon-letter-5adc0afd38eda5.6134099515243701732332.png" alt="" title="devhaydenkubit@gmail.com">
-        </a>
-        <a href="470-383-5646" target="_blank">
-          <img class="icon" src="icons/phone-call-svgrepo-com.svg" alt="" title="470-383-5646">
-        </a>
-        <a href="https://www.linkedin.com/in/hayden-kubit-3840aa285/" target="_blank">
-          <img class="icon" src="icons/linkedin.png" alt="">
-        </a>
-        <a href="Hayden_Kubit_Resume.pdf" target="_blank">
-          <img class="icon" src="icons/kisspng-crane-business-cu1ea7n-tru1ee5c-thxe1p-block-and-t-paper-icon-cliparts-5a84b8192f4fa8.2497677715186473211938.png" alt="" title="Resume">
-        </a>
-      </div>
-    </div>
-    <div class="frame">
-      <div class="container">
-        <div class="content">
-          <h1>Introducing HK Development - Pioneering Software Engineering Solutions for Your Success!</h1>
-          <br>
-          <h2>At HK Development, we are at the forefront of delivering innovative software engineering solutions that empower businesses to thrive in the digital age. As a premier software engineering company, we bring together a team of skilled professionals driven by a passion for excellence and a commitment to crafting cutting-edge digital products.</h2>
-          <br>
-          <h2>Our Comprehensive Services:</h2>
-          <br>
-          <h2>1. Tailor-Made Software Development: At HK Development, we believe that every business is unique. Our experts specialize in creating custom software solutions tailored to your specific requirements, ensuring that your vision is brought to life with precision and efficiency.</h2>
-          <h2>2. Web App Development: Stay ahead in the competitive market with our intuitive and user-friendly web applications. Our expert developers create seamless digital experiences that resonate with your target audience and achieve your business objectives.</h2>
-          <h2>3. Dedicated Product Maintenance and Support: We are committed to building lasting partnerships. Beyond deployment, our support extends to ongoing maintenance, updates, and technical assistance to keep your software running smoothly.</h2>
-          <br>
-          <h2>Why Choose HK Development?</h2>
-          <br>
-          <h2>1. Expertise and Experience: Our team comprises seasoned professionals with extensive experience across various industries. We stay abreast of the latest technologies and trends to deliver cutting-edge solutions.</h2>
-          <h2>2. Client-Centric Approach: Your success is our priority. At HK Development, we take the time to understand your business objectives, challenges, and goals, ensuring our solutions align perfectly with your vision.</h2>
-          <h2>3. Agile and Innovative: In a rapidly evolving tech landscape, agility and innovation are paramount. We adapt quickly to changing requirements and leverage the latest technologies to drive your success.</h2>
-          <h2>4. Timely Project Delivery: Time is of the essence, and we value your time as much as ours. Our streamlined development process ensures timely delivery without compromising on quality.</h2>
-          <br>
-          <h2>Partner with HK Development today and embark on a transformative journey to harness the full potential of technology for your business. Whether you are a startup aiming to disrupt the market or an established enterprise seeking optimization, our unwavering commitment to excellence will drive your success.</h2>
-          <br>
-          <h2>Reach out to us today, and together, let's shape a brighter future for your business!</h2>
+    <header>
+        <img src="HKD_Logo Transparent.png" alt="HK Development Logo" style="border-radius: 10%;">
+        <h1>HK Development</h1>
+        <p>Your Partner in Software Engineering and Web Solutions</p>
+        <div class="dropdown">
+            <span>Connect</span>
+            <div class="dropdown-content">
+                <a href="devhaydenkubit@gmail.com">Email</a>
+                <a href="https://www.linkedin.com/in/hayden-kubit-3840aa285/">LinkedIn</a>
+                <a href="Hayden_Kubit_Resume.pdf" download>Resume</a>
+            </div>
         </div>
-      </div>
+    </header>
+
+    <section>
+        <h3>Welcome to HK Development</h3>
+        <p>At HK Development, we are at the forefront of delivering innovative software engineering solutions that empower businesses to thrive in the digital age. As a premier software engineering company, we bring together a team of skilled professionals driven by a passion for excellence and a commitment to crafting cutting-edge digital products.</p>
+        <h3>Our Comprehensive Services:</h3>
+        <p>1. Tailor-Made Software Development: At HK Development, we believe that every business is unique. Our experts specialize in creating custom software solutions tailored to your specific requirements, ensuring that your vision is brought to life with precision and efficiency.</p>
+        <p>2. Web App Development: Stay ahead in the competitive market with our intuitive and user-friendly web applications. Our expert developers create seamless digital experiences that resonate with your target audience and achieve your business objectives.</p>
+        <p>3. Dedicated Product Maintenance and Support: We are committed to building lasting partnerships. Beyond deployment, our support extends to ongoing maintenance, updates, and technical assistance to keep your software running smoothly.</p>
+        <h3>Why Choose HK Development?</h3>
+        <p>1. Expertise and Experience: Our team comprises seasoned professionals with extensive experience across various industries. We stay abreast of the latest technologies and trends to deliver cutting-edge solutions.</p>
+        <p>2. Client-Centric Approach: Your success is our priority. At HK Development, we take the time to understand your business objectives, challenges, and goals, ensuring our solutions align perfectly with your vision.</p>
+        <p>3. Agile and Innovative: In a rapidly evolving tech landscape, agility and innovation are paramount. We adapt quickly to changing requirements and leverage the latest technologies to drive your success.</p>
+        <p>4. Timely Project Delivery: Time is of the essence, and we value your time as much as ours. Our streamlined development process ensures timely delivery without compromising on quality.</p>
+        <br>
+        <h3>Partner with HK Development today and embark on a transformative journey to harness the full potential of technology for your business. Whether you are a startup aiming to disrupt the market or an established enterprise seeking optimization, our unwavering commitment to excellence will drive your success.</h3>
+        <h3>Reach out to us today, and together, let's shape a brighter future for your business!</h3>
+    </section>
+
+    <div class="projects">
+        <h2>Our Past Projects</h2>
+        <a href="#" class="project-link">Coming Soon</a>
     </div>
+
+    <footer>
+        <p>&copy; 2023 HK Development. All rights reserved.</p>
+    </footer>
 </body>
+
 </html>
