--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
 
 <body>
     <header>
-        <img src="HKD_Logo Transparent.png" alt="HK Development Logo" style="border-radius: 10%;">
+        <img src="HkD_Logo Transparent.png" alt="HK Development Logo" style="border-radius: 10%;">
         <h1>HK Development</h1>
         <p>Your Partner in Software Engineering and Web Solutions</p>
         <div class="dropdown">
